--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 <title>CLOCK</title>
 <link href = "css/style.css" rel = "stylesheet">
+<script src = "js/clock.js"></script>
 
 
 </head>
@@ -16,7 +17,7 @@
 	 width="1024px" height="768px" viewBox="0 0 1024 768" enable-background="new 0 0 1024 768" xml:space="preserve">
 <circle id="minute" fill="#83D6FF" cx="529.894" cy="597" r="84.574"/>
 <circle id="hour" fill="#C6EFB4" cx="530" cy="200.106" r="144.68"/>
-<circle id="second" fill="#F2E983" cx="530.002" cy="478.108" r="15.598"/>
+<circle id="second" fill="#F2E983" cx="530.002" cy="478.108" r="10.598"/>
 </svg>
 </div>
 
